# Vulkan-Rendering-Project

./: CMakeLists.txt  README.md  flake.nix
build-linux/: VK_project
build-windows/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
code_index/: main.cpp
shaders/: simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
vk_lib/: app.cpp  app.hpp  keyboard_movement_controller.hpp  lve_device.cpp  lve_device.hpp  lve_game_object.hpp  lve_swap_chain.cpp  lve_swap_chain.hpp  my_engine_device.cpp  my_engine_device.hpp  simple_render_system.cpp  simple_render_system.hpp  ve_camera.cpp  ve_camera.hpp  ve_model.cpp  ve_model.hpp  ve_pipeline.cpp  ve_pipeline.hpp  ve_renderer.cpp  ve_renderer.hpp  ve_window.cpp  window.hpp
